z-index Corrected for Icons

--- a/style.css
+++ b/style.css
@@ -86,11 +86,9 @@
 .icon-wrapper {
     position: absolute;
     width: 400px;
-    height: 20px;
-    z-index: 4;
-    display: grid;
-    place-items: center;
-    padding: 320px;
+    float: left;
+    z-index: 5;
+    padding: 320px 0 0 0;
 }
 
 .social-networks {
